# 4store

./: .gitignore  .travis.yml  4store-0.pc.in  4store.spec  AUTHORS  CHANGELOG.md  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure  configure.ac  doap.ttl  garlik.com%3fsubject=4store  index.html  make-tarball.sh  version.sh  version.sh.in
src/admin/: .gitignore  Makefile.am  README  README.md  admin.c  admin_backend.c  admin_backend.h  admin_common.c  admin_common.h  admin_frontend.c  admin_frontend.h  admin_protocol.c  admin_protocol.h  admind.c
src/backend/: .gitignore  Makefile  Makefile.am  backend-intl.h  backend.c  backend.h  bcdump.c  bctest.c  bucket.c  bucket.h  chain.c  chain.h  disk-space.c  disk-space.h  import-backend.c  import-backend.h  list.c  list.h  listdump.c  listtest.c  lock.c  lock.h  metadata.c  metadata.h  mhash.c  mhash.h  mhashdump.c  mhashtest.c  prefix-trie-test.c  prefix-trie.c  prefix-trie.h  ptable.c  ptable.h  ptabletest.c  ptree.c  ptree.h  ptreebind.c  ptreedump.c  ptreetest.c  query-backend.c  (+20 more)
src/common/: .gitignore  4s-client.c  4s-common.c  4s-datatypes.h  4s-hash.h  4s-internals.h  4s-mdns.c  4s-server.c  4s-store-root.c  4s-store-root.h  4s-test.c  4store.h  Makefile  Makefile.am  README.fsp  bit_arr.c  bit_arr.h  datatypes.c  datatypes.h  datatypestest.c  error.c  error.h  gnu-options.c  gnu-options.h  hash.c  hash.h  hashtest.c  md5.c  msort.c  params.h  params.h.in  qsort.c  rdf-constants.h  rijndael-alg-fst.c  server.h  sort.h  timing.c  timing.h  umac.c  umac.h  (+1 more)
src/common/4store/: datatypes.h  hash.h
src/frontend/: .gitignore  4s-bind.c  4s-import.c  4s-indexes.c  4s-info.c  4s-query.c  4s-resolve.c  4s-reverse-bind.c  4s-transaction.c  4s-update.c  Makefile  Makefile.am  debug.h  decimal-test.c  decimal.c  decimal.h  delete-model.c  dump.c  filter-datatypes.c  filter-datatypes.h  filter-test.c  filter.c  filter.h  group.c  group.h  import.c  import.h  optimiser.c  optimiser.h  order.c  order.h  query-cache.c  query-cache.h  query-data.c  query-data.h  query-datatypes.c  query-datatypes.h  query-intl.h  query.c  query.h  (+8 more)
src/http/: .gitignore  Makefile  Makefile.am  httpd.c  httpd.h
src/libs/stemmer/: Makefile  Makefile.am
src/utilities/: .gitignore  4s-backend  4s-cluster-cache  4s-cluster-copy  4s-cluster-create  4s-cluster-destroy  4s-cluster-file-backup  4s-cluster-info  4s-cluster-replication-disable  4s-cluster-start  4s-cluster-stop  4s-dump  4s-file-backup  4s-restore  4s-rid.c  4s-ssh-all  4s-ssh-all-parallel  4s-ssh-keyscan  Makefile  Makefile.am  backend-copy.c  backend-destroy.c  backend-info.c  backend-setup.c  lex-file-verify.c  passwd.c
tests/: Makefile  Makefile.am  tests_4store.conf
tests/admin/: admin_tests.conf  run.pl  vars.sh
tests/admin/exemplar/: create-store  delete-stores  list-nodes  list-stores  start-stores  stop-stores
tests/admin/scripts/: create-store  delete-stores  list-nodes  list-stores  start-stores  stop-stores
tests/benchmark/: benchmark.rq  flush-all-caches.sh  http.pl  run-benchmark-old.sh  run.pl
tests/benchmark/queries/: broadway-lat-long.rq  feature-h12.rq  harold-ave.rq  sugar-hill-terrance-west-filter.rq
tests/httpd/: run.pl  sparql.sh
tests/httpd-extras/: run.pl  sparql.sh
tests/httpd-extras/exemplar/: change-admin-user  set-graph-access  unset-graph-access
tests/httpd-extras/results/: default-admin-user
tests/httpd-extras/scripts/: change-admin-user  default-admin-user  set-graph-access  unset-graph-access
tests/httpd/exemplar/: add-copy-move  ask-twice  badslot-construct  bind  bind-with-xsd-type  classes  cors_error  cors_options  count-sum-avg-distinct  date-comparison  dates  describe  distinct-order-by  empty  formats  fulltext  functions  functions-abs  functions-ceil  functions-floor  functions-hash  functions-rand  functions-round  functions-substr  groupby-limit-offset  groupby-multiple-joins  groupby-order-limit  groupby-order-limit-offset  insert-delete  insert-delete-where  issue_6  limit  multiple-predicate  number-comparison  old-put  post  put-get  simple-as  subselect  union-logic
tests/httpd/scripts/: add-copy-move  ask-twice  badslot-construct  bind  bind-with-xsd-type  classes  cors_error  cors_get  cors_head  cors_options  cors_post  count-sum-avg-distinct  date-comparison  dates  describe  distinct-order-by  empty  formats  fulltext  functions  functions-abs  functions-ceil  functions-floor  functions-hash  functions-rand  functions-round  functions-substr  groupby-limit-offset  groupby-multiple-joins  groupby-order-limit  groupby-order-limit-offset  insert-delete  insert-delete-where  issue_6  limit  multiple-predicate  number-comparison  old-put  post  put-get  (+3 more)
tests/import/: cluster-run.pl  run.pl  test-create.sh  test-start.sh  test-stop.sh
tests/import/exemplar/: add-and-delete  big-small-big  delete-tiger  insert-delete  lengthy  lots-of-triples  model-file-and-list  nasty  one-segment  parallel  small-delete  transaction-delete-rollback  transaction-models
tests/import/scripts/: add-and-delete  big-small-big  delete-tiger  empty  insert-delete  lengthy  lots-of-triples  model-file-and-list  nasty  one-segment  parallel  small-delete
tests/load/: query.sh  results.txt  run.pl  sparql.sh
tests/query/: cluster-run.pl  cluster-setup.sh  parallel-query.pl  parallel-test.sh  run.pl  setup.sh
tests/query/exemplar/: add-and-delete  aggregates-empty-cases  construct-union  dates  distinct-union  foaf-agg-filter  foaf-agg-filter-corner0  foaf-bnode-vs-variable  foaf-construct  foaf-disjunctive-filter  foaf-distinct  foaf-filter-or-pred  foaf-graph-all  foaf-graph-pred  foaf-groupby-filter  foaf-groupby-filter2  foaf-in-expr  foaf-knows-name  foaf-knows-name-sha1  foaf-knows-sha1  foaf-knows-sha1-xml  foaf-minus  foaf-multi-disjunctive-filter  foaf-nested-optional  foaf-optional-order  foaf-optional-pair  foaf-optional-regex  foaf-pagination-filter  foaf-repeat-var  groupby-count-order1  groupby-count-order2  null-optional-double  optional-no-lhs  select-order  select-unused  size  (+13 more)
(+447 files in other folders)
