test:
	(cd query && pwd && ./setup.sh --autorun)

EXTRA_DIST = query/setup.sh query/run.pl

EXTRA_DIST += query/exemplar/add-and-delete query/exemplar/count \
query/exemplar/distinct-predicate query/exemplar/foaf-all-limit \
query/exemplar/foaf-bnode-vs-variable query/exemplar/foaf-construct \
query/exemplar/foaf-disjunctive-filter query/exemplar/foaf-distinct \
query/exemplar/foaf-graph-all query/exemplar/foaf-graph-pred \
query/exemplar/foaf-knows-name query/exemplar/foaf-knows-name-sha1 \
query/exemplar/foaf-knows-sha1 query/exemplar/foaf-knows-sha1-xml \
query/exemplar/foaf-multi-disjunctive-filter \
query/exemplar/foaf-nested-optional query/exemplar/foaf-nothing \
query/exemplar/foaf-optional-order query/exemplar/foaf-optional-pair \
query/exemplar/foaf-optional-regex query/exemplar/foaf-repeat-var \
query/exemplar/graphs query/exemplar/integrity query/exemplar/null-optional \
query/exemplar/null-optional-double query/exemplar/optimiser-disjunction \
query/exemplar/select-bnodes query/exemplar/select-order \
query/exemplar/select-unused query/exemplar/size query/exemplar/tiger-broadway \
query/exemplar/tiger-explosion query/exemplar/tiger-fail-optional \
query/exemplar/tiger-harold-ave query/exemplar/tiger-landmarks \
query/exemplar/tiger-mixed-optional query/exemplar/tiger-reverse \
query/exemplar/tiger-sugar-hill query/exemplar/tiger-sugar-hill-filter \
query/exemplar/tiger-typical query/exemplar/tiger-water-names \
query/exemplar/union-nobind

EXTRA_DIST += query/scripts/add-and-delete query/scripts/count \
query/scripts/distinct-predicate query/scripts/foaf-all-limit \
query/scripts/foaf-bnode-vs-variable query/scripts/foaf-construct \
query/scripts/foaf-disjunctive-filter query/scripts/foaf-distinct \
query/scripts/foaf-graph-all query/scripts/foaf-graph-pred \
query/scripts/foaf-knows-name query/scripts/foaf-knows-name-sha1 \
query/scripts/foaf-knows-sha1 query/scripts/foaf-knows-sha1-xml \
query/scripts/foaf-multi-disjunctive-filter query/scripts/foaf-nested-optional \
query/scripts/foaf-nothing query/scripts/foaf-optional-order \
query/scripts/foaf-optional-pair query/scripts/foaf-optional-regex \
query/scripts/foaf-repeat-var query/scripts/graphs query/scripts/integrity \
query/scripts/null-optional query/scripts/null-optional-double \
query/scripts/optimiser-disjunction query/scripts/select-bnodes \
query/scripts/select-order query/scripts/select-unused query/scripts/size \
query/scripts/tiger-broadway query/scripts/tiger-explosion \
query/scripts/tiger-fail-optional query/scripts/tiger-harold-ave \
query/scripts/tiger-landmarks query/scripts/tiger-mixed-optional \
query/scripts/tiger-reverse query/scripts/tiger-sugar-hill \
query/scripts/tiger-sugar-hill-filter query/scripts/tiger-typical \
query/scripts/tiger-water-names query/scripts/union-nobind
