include mkinc_utf8.mak

AM_CFLAGS = -Iinclude

noinst_LIBRARIES = libstemmer.a

noinst_HEADERS = src_c/stem_UTF_8_danish.h src_c/stem_UTF_8_dutch.h src_c/stem_UTF_8_english.h src_c/stem_UTF_8_finnish.h src_c/stem_UTF_8_french.h src_c/stem_UTF_8_german.h src_c/stem_UTF_8_hungarian.h src_c/stem_UTF_8_italian.h src_c/stem_UTF_8_norwegian.h src_c/stem_UTF_8_porter.h src_c/stem_UTF_8_portuguese.h src_c/stem_UTF_8_romanian.h src_c/stem_UTF_8_russian.h src_c/stem_UTF_8_spanish.h src_c/stem_UTF_8_swedish.h src_c/stem_UTF_8_turkish.h include/libstemmer.h runtime/api.h runtime/header.h libstemmer/modules_utf8.h

libstemmer_a_SOURCES = $(snowball_sources)
